Fixed bad rendering on IOS

--- a/src/CSS/Componets/Background.css
+++ b/src/CSS/Componets/Background.css
@@ -32,7 +32,7 @@ html{
 
 /* Platform Optimizations */
 /* Media Query Phones */
-@media only screen and (max-device-width: 421px) {
+@media only screen and (max-device-width: 450px) {
   html{
     background-attachment: local;
     height: 86px;
