--- a/src/CSS/Componets/Footer.css
+++ b/src/CSS/Componets/Footer.css
@@ -50,7 +50,7 @@
 
 /* Platform Optimizations */
 /* Media Query Phones */
-@media only screen and (max-device-width: 421px) {
+@media only screen and (max-device-width: 450px) {
   /* Footer */
   .footer {
     font-size: 14px;
