--- a/src/CSS/Pages/About.css
+++ b/src/CSS/Pages/About.css
@@ -277,7 +277,7 @@
 } 
 
 /* Media Query Phones */
-@media only screen and (max-device-width: 421px) {
+@media only screen and (max-device-width: 450px) {
   /* About Boxs */
   .about-box-containers{
     margin-left: -40px;
