--- a/src/CSS/Pages/Home.css
+++ b/src/CSS/Pages/Home.css
@@ -175,7 +175,7 @@
 }  
 
 /* Media Query Phones */
-@media only screen and (max-device-width: 421px) {
+@media only screen and (max-device-width: 450px) {
       /* Main Body */
       .MainBody {
         padding-top: 10vh;
