--- a/src/CSS/Pages/Projects.css
+++ b/src/CSS/Pages/Projects.css
@@ -147,7 +147,7 @@
 }  
  
 /* Media Query Phones */
-@media only screen and (max-device-width: 421px) {
+@media only screen and (max-device-width: 450px) {
   /* Project Boxs */
   .project-box-containers{
     margin-left: -40px;
