--- a/src/CSS/Pages/Socials.css
+++ b/src/CSS/Pages/Socials.css
@@ -99,7 +99,7 @@
   }
 }  
 /* Media Query Phones */
-@media only screen and (max-device-width: 421px) {
+@media only screen and (max-device-width: 450px) {
   /* Project Boxs */
   .social-box-containers{
     margin-left: -40px;
